# fastAPI

./: pyproject.toml
app/: .env  main.py  models.py
fastapi_OAuth2/: README.md  pyproject.toml
fastapi_OAuth2/app/: fakedb.py  main.py
fastapi_sqlmodel/: README.md  pyproject.toml  requirements.txt
fastapi_sqlmodel/app/: crud.py  database.py  main.py  models.py  schemas.py
